# garnet

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/workflows/: build.yaml
garnet-cli/: Cargo.toml
garnet-cli/src/: lib.rs
garnet-core/: Cargo.toml
garnet-core/src/: gemini.rs  lib.rs  localize.rs  macros.rs  prelude.rs
garnet-gtk/: Cargo.toml
garnet-gtk/src/: lib.rs
garnet-mac/: Cargo.toml
garnet-mac/src/: main.rs
garnet-win/: Cargo.toml
locale/en/: garnet.ftl
locale/en/garnet/: clap.json  cli.ftl
locale/es-MX/: cli.json  garnet.ftl
locale/es/garnet/: clap.json  cli.ftl
src/: cli.rs  gemini.rs  gui.rs  lib.rs  localize.rs  macros.rs  main.rs
