[package]
name = "garnet"
version = "0.0.0"
authors = ["Nicole Mazzuca <nicole@strega-nil.co>"]

edition = "2018"

description = "A cross-platform locale-sensitive gemini browser"
license = "Apache-2.0"

homepage = "https://github.com/strega-nil/garnet"
repository = "https://github.com/strega-nil/garnet"
documentation = "https://github.com/strega-nil/garnet"

[features]
# This is installed on the system; look in the system directories for resources
# as opposed to in the directory of the exe
system_install = []

[[bin]]
name = "garnet"
path = "src/gui.rs"

[[bin]]
name = "garnet-cli"
path = "src/cli.rs"

[workspace]
members = [
  ".",
  "garnet-core",
  "garnet-cli",
  "garnet-win",
  "garnet-gtk",
  "garnet-mac",
]

[build-dependencies.anyhow]
version = "1.0.31"

[dependencies.garnet-core]
version = "0.0.0"

[dependencies.garnet-cli]
version = "0.0.0"

[target.'cfg(target_os="windows")'.dependencies.garnet-win]
version = "0.0.0"

[target.'cfg(target_os="linux")'.dependencies.garnet-gtk]
version = "0.0.0"

[target.'cfg(target_os="macos")'.dependencies.garnet-mac]
version = "0.0.0"

[patch.crates-io.garnet-core]
path = "garnet-core"
[patch.crates-io.garnet-cli]
path = "garnet-cli"
[patch.crates-io.garnet-win]
path = "garnet-win"
[patch.crates-io.garnet-gtk]
path = "garnet-gtk"
[patch.crates-io.garnet-mac]
path = "garnet-mac"
