
[package]
name = "garnet-cli"
version = "0.0.0"
authors = ["Nicole Mazzuca <nicole@strega-nil.co>"]

edition = "2018"

description = "The command line interface for Garnet. A test-bed, mostly."
license = "Apache-2.0"

homepage = "https://github.com/strega-nil/garnet"
repository = "https://github.com/strega-nil/garnet"
documentation = "https://github.com/strega-nil/garnet"

[dependencies.garnet-core]
version = "0.0.0"
