[package]
name = "garnet-core"
version = "0.0.0"
authors = ["Nicole Mazzuca <nicole@strega-nil.co>"]

edition = "2018"

description = "A cross-platform locale-sensitive gemini browser"
license = "Apache-2.0"

homepage = "https://github.com/strega-nil/garnet"
repository = "https://github.com/strega-nil/garnet"
documentation = "https://github.com/strega-nil/garnet"

[dependencies.anyhow]
version = "1.0.31"

[dependencies.clap]
version = "2.27.0"
features = [ "yaml" ]

[dependencies.native-tls]
version = "=0.2.4"

[dependencies.fluent]
version = "=0.12.0"
[dependencies.fluent-langneg]
version = "=0.13.0"

[dependencies.unic-langid]
version = "=0.9.0"
features = [ "macros" ]

[dependencies.winapi]
version = "0.3.8"
features = [ "stringapiset", "winnls" ]
